# StraitCraftOld

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  a.out
StraitX/Engine/sources/core/: log.hpp
StraitX/Engine/sources/graphics/api/: command_list.hpp  frame_graph.hpp  framebuffer.hpp  gpu_configuration.hpp  gpu_texture.hpp  gpu_texture_view.hpp  shader.hpp  swapchain.hpp  transfer_memory.hpp
StraitX/Engine/sources/graphics/vulkan/: transfer_engine.hpp
StraitX/Engine/sources/main/: application.hpp  engine.cpp  engine.hpp
StraitX/Engine/sources/platform/: io.hpp
StraitX/Engine/sources/platform/linux/: mouse_impl.cpp
StraitX/Engine/sources/servers/: display_server.cpp
resources/: texture_atlas.png~
shaders/: block.frag.glsl  block.vert.glsl  mesh.frag.glsl  mesh.vert.glsl
sources/: attributes.hpp  block_builder.cpp  block_builder.hpp  block_renderer.cpp  block_renderer.hpp  blocks.cpp  blocks.hpp  buffer.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  chunk_builder.cpp  chunk_builder.hpp  chunk_renderer.cpp  chunk_renderer.hpp  debug.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image.hpp  main.cpp  math.cpp  math.hpp  mesh.cpp  mesh.hpp  mesh_renderer.cpp  mesh_renderer.hpp  renderer.cpp  renderer.hpp  shader.hpp  straitcraft.cpp  straitcraft.hpp  texture.hpp  texture_atlas.cpp  texture_atlas.hpp  types.hpp  world.cpp  world.hpp
